--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 server.error.whitelabel.enabled=false
+spring.servlet.multipart.max-file-size=2024MB
+spring.servlet.multipart.max-request-size=2024MB
