--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,15 @@
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
-# //DESKTOP-PHKJ6SR\\SQLEXPRESS;
+#useBulkCopyForBatchInsert=true
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=sample;encrypt=false
 spring.datasource.username=vijaysql
 spring.datasource.password=pwd123
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql = true
-
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.jdbc.batch_size=2000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 server.error.whitelabel.enabled=false
 spring.servlet.multipart.max-file-size=2024MB
 spring.servlet.multipart.max-request-size=2024MB
