--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #useBulkCopyForBatchInsert=true
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=sample;encrypt=false
 spring.datasource.username=vijaysql
-spring.datasource.password=pwd123
+spring.datasource.password=Whyspwd@1
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.generate_statistics=true
@@ -13,3 +13,4 @@ spring.jpa.properties.hibernate.order_updates=true
 server.error.whitelabel.enabled=false
 spring.servlet.multipart.max-file-size=2024MB
 spring.servlet.multipart.max-request-size=2024MB
+jio.batch.size=2000
