'Workbook_Close_operation_added'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=8082
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #useBulkCopyForBatchInsert=true
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=sample;encrypt=false
@@ -6,11 +6,10 @@ spring.datasource.username=vijaysql
 spring.datasource.password=Whyspwd@1
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.generate_statistics=true
-spring.jpa.properties.hibernate.jdbc.batch_size=2000
+spring.jpa.properties.hibernate.generate_statistics=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 server.error.whitelabel.enabled=false
 spring.servlet.multipart.max-file-size=2024MB
 spring.servlet.multipart.max-request-size=2024MB
-jio.batch.size=2000
+jio.batch.size=1000
